# mnemoreg

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  coverage.xml  pyproject.toml
.github/workflows/: auto-tag.yml  ci.yml  publish.yml
mnemoreg/: __init__.py  _types.py  core.py
mnemoreg/_storage/: __init__.py  base.py  memory.py  protocol.py
mnemoreg/core/: __init__.py  registry.py  stored_item.py  utils.py
mnemos/: __init__.py  core.py
tests/: test_registry_complex.py  test_registry_descriptions.py  test_registry_happy_edgecases.py  test_registry_happy_paths.py  test_registry_initialization.py  test_registry_mistakes.py  test_registry_threaded.py
