[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemoreg"
version = "0.1.0"
description = "A tiny thread-safe registry mapping for simple plugin/registry use-cases."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [ { name = "Björn Schrammel", email = "mnemoreg@schrammel.dev" } ]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Source = "https://github.com/i3iorn/mnemoreg"

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
    "ruff",
    "mypy",
    "black",
    "isort",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C", "N", "I"]
exclude = [".venv", "build", "dist"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
